OTUS.Pet.Education/SteelDesignerEngineer/k8s/Kubernetes/ingress/traefik-ingressclass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: traefik
  annotations:
    kubernetes.io/ingress.class: "traefik"
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: traefik.io/ingress-controller
