OTUS.Pet.Education/SteelDesignerEngineer/k8s/Kubernetes/ingress/landscape-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: landscape-server
  namespace: database
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    # For HTTPS enable below:
    # traefik.ingress.kubernetes.io/router.entrypoints: websecure
    # traefik.ingress.kubernetes.io/router.tls: "true"
    # kubernetes.io/tls-acme: "true"
spec:
  rules:
    - host: landscape.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: landscape-server
                port:
                  number: 80
  # tls:
  #   - hosts:
  #       - landscape.local
  #     secretName: landscape-tls
