OTUS.Pet.Education/SteelDesignerEngineer/k8s/Kubernetes/ingress/mongo-express-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: mongodb-ingressroute
  namespace: mongodb
spec:
  entryPoints:
    - mongodb
  routes:
    - match: Host(`mongodb.steel-designer-engineer.ru`)
      services:
        - name: mongodb-service
          namespace: mongodb
          port: 27017
  tls:
    certResolver: mytlschallenge
