OTUS.Pet.Education/SteelDesignerEngineer/k8s/Kubernetes/ingress/mongodb-ingressroute-tcp.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
 name: mongodb-ingressroute-tcp
 namespace: mongodb
spec:
 entryPoints:
 - mongodb
 routes:
 - match: HostSNI(`mongodb.steel-designer-engineer.com`)
 services:
 - name: mongodb
 port: 27017
 tls:
 certResolver: mytlschallenge
