OTUS.Pet.Education/SteelDesignerEngineer/k8s/Kubernetes/ingress/mongodb-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: mongodb-ingressroute
  namespace: n8n
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`mongodb.steel-designer-engineer.com`)
      kind: Rule
      services:
        - name: mongodb
          namespace: mongodb
          port: 27017
  tls:
    certResolver: mytlschallenge
