OTUS.Pet.Education/SteelDesignerEngineer/k8s/Kubernetes/ingress/n8n-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n-ingress
  namespace: n8n
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "web,websecure"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: "mytlschallenge"
spec:
  ingressClassName: traefik
  rules:
  - host: n8n.steel-designer-engineer.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: n8n
            port:
              number: 5678
  tls:
  - hosts:
    - n8n.steel-designer-engineer.ru
    secretName: n8n-tls
