OTUS.Pet.Education/SteelDesignerEngineer/k8s/Kubernetes/ingress/qdrant-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qdrant-ingress
  namespace: qdrant
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: "web,websecure"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: "mytlschallenge"
    traefik.ingress.kubernetes.io/auth-type: "basic"
    traefik.ingress.kubernetes.io/auth-secret: "qdrant-basic-auth"
    traefik.ingress.kubernetes.io/auth-realm: "Login Required"
    traefik.ingress.kubernetes.io/auth-remove-header: "false"
spec:
  ingressClassName: traefik
  rules:
  - host: qdrant.steel-designer-engineer.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: qdrant
            port:
              number: 6333
  tls:
  - hosts:
    - qdrant.steel-designer-engineer.ru
    secretName: qdrant-tls
