OTUS.Pet.Education/SteelDesignerEngineer/k8s/Kubernetes/ingress/qdrant-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
 name: qdrant
 namespace: qdrant
spec:
 entryPoints:
 - web
 - websecure
 routes:
 - match: Host(`qdrant.steel-designer-engineer.com`)
   kind: Rule
   middlewares:
   - name: qdrant-basic-auth
     namespace: qdrant
   services:
   - name: qdrant
     port: 6333
     scheme: http
     passHostHeader: true
 tls:
   certResolver: mytlschallenge
