OTUS.Pet.Education/SteelDesignerEngineer/k8s/Kubernetes/ingress/rabbitmq-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-ingress
  namespace: rabbitmq
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    traefik.ingress.kubernetes.io/router.entrypoints: "web,websecure"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: "mytlschallenge"
spec:
  ingressClassName: traefik
  rules:
  - host: rabbitmq.steel-designer-engineer.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rabbitmq-kustomize
            port:
              number: 15672
  tls:
  - hosts:
    - rabbitmq.steel-designer-engineer.ru
    secretName: rabbitmq-tls
