OTUS.Pet.Education/SteelDesignerEngineer/k8s/Kubernetes/ingress/rabbitmq-kustomize-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rebitmq-ingress
  namespace: rebitmq
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: mytlschallenge
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - rabbitmq.steel-designer-engineer.ru
    secretName: rebitmq-kustomize-tls
  rules:
  - host: rabbitmq.steel-designer-engineer.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rebitmq-kustomize
            port:
              number: 15672
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: rebitmq-kustomize
            port:
              number: 15672
