OTUS.Pet.Education/SteelDesignerEngineer/k8s/Kubernetes/ingress/rancher-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rancher-ingress
  namespace: cattle-system
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    traefik.ingress.kubernetes.io/router.entrypoints: "web,websecure"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: "mytlschallenge"
spec:
  ingressClassName: traefik
  rules:
  - host: rancher.steel-designer-engineer.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rancher
            port:
              number: 80
  tls:
  - hosts:
    - rancher.steel-designer-engineer.ru
    secretName: rancher-tls
